# mukharomdev

./: .buildinfo  .gitignore  About.html  Contact.html  Curated_List_Web.html  EXAMPLE-CONTRIBUTING.md  Home_Site.html  Installation.md  LICENSE  License.html  README.md  about.html  contact.html  daftar-link-pemrograman.html  genindex.html  home.html  index.html  license.html  objects.inv  requirements.txt  robots.txt  search.html  searchindex.js  sitemap-index.xml
.doctrees/: About.doctree  Contact.doctree  Curated_List_Web.doctree  Home_Site.doctree  License.doctree  about.doctree  contact.doctree  daftar-link-pemrograman.doctree  environment.pickle  home.doctree  index.doctree  license.doctree
.github/: FUNDING.yml  dependabot.yml
Article/: index.html
Assembly/: index.html  versi_indonesia.html  versi_inggris.html
Bash/: index.html  versi_inggris.html
BuildSystem/: index.html  versi_indonesia.html  (+1 more)
code/python/learnpython/: README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
code/python/learnpython/learnpython/: __init__.py
code/python/learnpython/learnpython/data_structure/: __init__.py  avl_tree.py  stack_list.py
code/python/learnpython/learnpython/decorator/: __init__.py  decorator.py
code/python/learnpython/learnpython/design_pattern/: README.rst  __init__.py
code/python/learnpython/learnpython/design_pattern/behavioral/: ChainOfResponsibility.py  Command.py  Interpreter.py  Iterator.py  Mediator.py  Memento.py  Observer.py  State.py  Strategy.py  TemplateMethod.py  Visitor.py  __init__.py
code/python/learnpython/learnpython/design_pattern/creational/: AbstractFactory.py  Builder.py  FactoryMethod.py  Prototype.py  Singleton.py  __init__.py
code/python/learnpython/learnpython/design_pattern/structural/: Adapter.py  Bridge.py  Composite.py  Decorator.py  Facade.py  Flyweight.py  Proxy.py  __init__.py
code/python/learnpython/tests/: test.py
code/python/learnpython/tool/: helper.py
code/python/yorishflask/: MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg
code/python/yorishflask/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
code/python/yorishflask/yorishflask/: __init__.py  auth.py  blog.py  db.py
code/python/yorishflask/yorishflask/templates/: base.html
code/python/yorishflask/yorishflask/templates/blog/: index.html
(+293 files in other folders)
