[metadata]
name = learnpython
version = 0.0.1
author	= mukharomdev
author_email = mukharomdev@gmail.com
description	 = Hanya packages untuk latihan belajar python
long_description = file:README.rst
url = https://github.com/mukharomdev/mukharomdev.git
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    requests
    importlib-metadata; python_version >= "3.8"
packages = learnpython
packages_dir =
	=learnpython
python_requires = >=3.8

[options.packages.find]
where = learnpython
include = learnpython*
exclude =
	build*
	dist*
	docs*
	tests*
	*.tests
	*.tests.*
	tools*
	pkg_sources*
	.env*
