[metadata]
name = yorishflask
version = 0.0.1
author	= mukharomdev
author_email = mukharomdev@gmail.com
description	 = Hanya packages untuk latihan belajar python wev dengan flask
long_description = file:README.rst
url = https://github.com/mukharomdev/mukharomdev.git
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Web Framework :: flask
[options]
install_requires =
    requests
    importlib-metadata; python_version >= "3.8"
packages = yorishflask
packages_dir =
	=yorishflask
python_requires = >=3.8

[options.packages.find]
where = yorishflask
include = yorishflask*
exclude =
	build*
	dist*
	docs*
	tests*
	*.tests
	*.tests.*
	tools*
	pkg_sources*
	.env*
	

